# docker-kubernetes-load-balancer

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
backend/accounts/: models.py  schema.py  views.py
backend/accounts/migrations/: 0001_initial.py
backend/mysite/: settings.py  urls.py
frontend/: .gitignore  Dockerfile  README.md  jest.config.ts  nx.json  package-lock.json  package.json  project.json  tailwind.config.js
frontend/e2e/: cypress.config.ts  project.json
frontend/src/: index.html  styles.scss
frontend/src/app/: app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts  auth.service.ts  graphql.module.ts  nx-welcome.component.ts
frontend/src/app/components/home/: home.component.css  home.component.html  home.component.ts
frontend/src/app/components/login/: login.component.html  login.component.ts
frontend/src/app/components/register/: register.component.html  register.component.ts
frontend/src/app/protected/: protected.routes.ts
k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  postgres-deployment.yaml  postgres-pvc.yaml
